# matrix-ticker

./: Cargo.toml  README.md
src/: main.rs
